# ai-agent-getting-started

./: Dockerfile  Dockerfile-ollama  README.md  docker-compose.yml  docker-login.sh  poetry.toml  pyproject.toml
app/: main.py  main_local.py  start.sh
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm_ollama/: Chart.yaml  README.md  values.yaml
helm_ollama/templates/: deployment.yaml
scripts/: build-and-push-docker.sh  build-and-test-docker.sh
